# sqlite-notebook

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  all.do  all.od  all.rc.od  build_for_compiledb.sh  clean.do  compile_commands.json.do  config.c  configure.help  configured.do  flake.nix  install.od  main.c  make_kernel_json.sh  package.nix  rust-analyzer.sh  sqlite-notebook.list.od  sqlite_notebook.h
.github/workflows/: build.yml
bear/: default.nix  exclude-test-from-main.patch
demo/: albums.csv  demo.ipynb  tracks.csv
libcre2-sys/: Cargo.toml  build.rs  wrapper.h
libzmq-sys/: Cargo.toml  build.rs
rc/: libzmq.rc.od  sqlite.rc.od
re2/: Cargo.toml
re2/src/: error.rs  lib.rs  options.rs
src/: c.rs  execute.rs  main.rs  wire.rs
src/execute/: dot.rs  flexible_import_test.csv  help.txt  import_test.csv  mod.rs  parameter.rs  parameters.sql  position.rs  sqlite_schema.sql
zombiezen-sqlite/: Cargo.toml
zombiezen-sqlite/src/: auth.rs  bytearray.rs  column_metadata.rs  config.rs  connection.rs  function.rs  glob.rs  lib.rs  quote.rs  result.rs  statement.rs  txn_state.rs  value.rs
zombiezen-zmq/: Cargo.toml
zombiezen-zmq/src/: context.rs  lib.rs  poll.rs  socket.rs
