[package]
name = "sqlite-notebook"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.4.0", features = ["derive"] }
csv = "1.2.2"
hex = { version = "0.4.3", features = ["serde"] }
hmac = "0.12.1"
rand = "0.8.5"
re2 = { path = "./re2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
tempfile = "3.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = "1.4.1"
zombiezen-const-cstr = "1.0.0"
zombiezen-sqlite = { path = "./zombiezen-sqlite" }
zombiezen-zmq = { path = "./zombiezen-zmq" }

[workspace]

members = [
  ".",
  "libcre2-sys",
  "libzmq-sys",
  "re2",
  "zombiezen-sqlite",
  "zombiezen-zmq",
]
