[package]
name = "zombiezen-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
libsqlite3-sys = { version = "0.26.0", features = ["buildtime_bindgen"] }

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"
