[package]
name = "zombiezen-sqlite"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
dashmap = "5.5.3"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.26.0", features = ["buildtime_bindgen"] }

[build-dependencies]
cc = "1.0.83"
pkg-config = "0.3.27"

[dev-dependencies]
zombiezen-const-cstr = "1.0.0"
