[package]
name = "zombiezen-zmq"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
errno = "0.3.2"
libc = "0.2.147"
libzmq-sys = { path = "../libzmq-sys" }
tracing = "0.1.37"
